--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --watch server ./bin/www"
+    "dev": "nodemon --watch app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
